[package]
name = "tg-ws-proxy-rs"
version = "0.0.12"
edition = "2024"
description = "Telegram MTProto WebSocket Bridge Proxy — Rust port of Flowseal/tg-ws-proxy"
license = "MIT"
readme = "README.md"
repository = "https://github.com/valnesfjord/tg-ws-proxy-rs"
homepage = "https://github.com/valnesfjord/tg-ws-proxy-rs"
documentation = "https://docs.rs/tg-ws-proxy-rs"
keywords = ["telegram", "mtproto", "websocket", "proxy", "rust"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "tg-ws-proxy"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket protocol with TLS support
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tungstenite = { version = "0.24" }

# AES-256-CTR encryption for MTProto obfuscation
aes = "0.8"
ctr = "0.9"
cipher = "0.4"

# SHA-256 for MTProto key derivation
sha2 = "0.10"

# HMAC-SHA256 for FakeTLS upstream proxy authentication
hmac = "0.12"

# Random bytes for handshake generation
rand = "0.9"

# Hex encoding / decoding utilities
hex = "0.4"

# CLI argument parsing (with env-variable fallback)
clap = { version = "4", features = ["derive", "env"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Async stream utilities (SinkExt, StreamExt)
futures-util = "0.3"

# Custom TLS configuration (skip-verify option)
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
# Bundled Mozilla root cert store (used by the default TLS connector)
webpki-roots = "0.26"
# Async TLS streams (transitive dep of tokio-tungstenite; used for HTTPS GET in default_domains)
tokio-rustls = "0.26"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
